Clean up simple test warnings